--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding-top: 800px;
+    text-align: center;
 }
 
 .profile {
@@ -24,6 +25,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 9;
+    text-align: center;
 }
 
 .parallex-inner {
@@ -43,7 +45,7 @@ h1 {
 #name {
     font-size: 30px;
     line-height: 1.2;
-    font-family: 'Imperial Script',cursive;
+    font-family: 'Imperial Script', cursive;
 }
 
 h2 {
@@ -73,26 +75,58 @@ p {
     line-height: 1.3;
 
 }
+
 .menu {
-    list-style: none;
-    font-family: sans-serif;
-    position: absolute;
-    top: 10px;
-    right:30px;
+    position: fixed;
+    top: 0px;
     z-index: 10;
-    cursor: pointer;
+    background: white;
+    width: 100%;
+    margin-top: 0px;
 }
 
 .links {
-    float: left;
-    color: #fff;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
+    padding-left: 33px;
+    padding-right: 25px;
     font-family: fantasy;
     font-size: 20px;
-    }
+    display: inline;
+}
+
 .links:hover {
-    background-color: #800000;
+    font-size: 25px;
+    text-decoration: underline;
+}
+
+a {
+    text-decoration: none;
+    color: crimson;
+    text-shadow: 2px 2px gainsboro;
+    
+}
+
+.article.hover {
+    color: fuchsia;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+#writings  a {
+    text-shadow: none !important;
+    text-decoration: underline !important;
+    color: blue !important
+}
+#contacts {
+    background-color: firebrick;
+}
+.contact_1 a {
+    color: white;
+    text-shadow: none;
+}
+.contact_1 h3 {
+    display: inline;
+}
+#contacts iframe {
+    width: 100%;
 }
